maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: ambiguous reference to overloaded definition,
both method run in class IslandMaze of type ()Unit
and  method run in class IslandMaze of type ()Unit
match argument types ()
      run();
      ^IslandMaze:17: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime20.IslandMaze'
def run () {
    ^