maze.island.IslandMaze.scala.code
override def run() {
  	nord();
    while(!estSurBiscuit()){
    	nord();
      run();
  }
  prendBiscuit();
}

def nord (){
  while(!estFaceMur()){
    avance();
  }
}

def run () {
    while(!estSurBiscuit() && (getDirection() == Direction.NORTH && !estFaceMur())){
    if(estFaceMur()){
      gauche();
      if(estFaceMur()){
        droite();droite();
      } else {
        avance();
      }
    } else {
      gauche();
      if(estFaceMur()){
        droite();avance();
      } else {
        avance();gauche();
        if(!estFaceMur()){
          avance();
        } else {
          droite();
        }
      }
    }
  }

}
